# test-py

./: .gitignore  README.md  pyproject.toml
pyapp/: pyoxidizer.bzl  requirements.txt
test_py/: test_py.py
tests/: test_test_py.py
